styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700;900");

@tailwind base;
@tailwind components;
@tailwind utilities;

/*  */
:root {
  font-size: 18px;
}

body,
html {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  overscroll-behavior-y: contain;
  /* stops Chrome from “rubberband scrolling” when toggling hidden inputs. */
}

input::file-selector-button {
  font-weight: 500;
  letter-spacing: 1.2px;
  color: white;
  background-color: rgb(82, 26, 167);
  padding: 8px 12px;
  border-bottom: 4px solid rgb(221 214 254);
  border-radius: 3px;
  border-right: 0px;
  border-left: 0px;
  border-top: 0px;
  border-radius: 20px;
}

.visually-hidden,
.sr-only {
  /* hides content except when viewed by screen readers
  https://prismic.io/blog/nextjs-accessibility */
  position: absolute;
  width: 1px;
  height: 1px;
  overflow: hidden;
  clip: rect(1px, 1px, 1px, 1px);
  white-space: nowrap;
}

input::file-selector-button:hover {
  background-color: rgb(96 165 250);
  color: white;
  border-bottom: 6px solid rgb(59 130 246);
  font-style: inherit;
}

@layer base {
  :root {
    /* --background: 259, 69%, 35%; */
    /* tailwindcss's background is set to dark purple, aka rgb(76, 29, 149) ≈ hsl(259, 69%, 35%) needed for when text overflows, the background doesn't turn gray
    */
    --foreground: 0 0% 3.9%;
    --card: 0 0% 100%;
    --card-foreground: 0 0% 3.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 0 0% 3.9%;
    --primary: 0 0% 9%;
    --primary-foreground: 0 0% 98%;
    --secondary: 0 0% 96.1%;
    --secondary-foreground: 0 0% 9%;
    --muted: 0 0% 96.1%;
    --muted-foreground: 0 0% 45.1%;
    --accent: 0 0% 96.1%;
    --accent-foreground: 0 0% 9%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --border: 0 0% 89.8%;
    --input: 0 0% 89.8%;
    --ring: 0 0% 3.9%;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
    --radius: 0.5rem;
  }
  .dark {
    --background: 0 0% 3.9%;
    --foreground: 0 0% 98%;
    --card: 0 0% 3.9%;
    --card-foreground: 0 0% 98%;
    --popover: 0 0% 3.9%;
    --popover-foreground: 0 0% 98%;
    --primary: 0 0% 98%;
    --primary-foreground: 0 0% 9%;
    --secondary: 0 0% 14.9%;
    --secondary-foreground: 0 0% 98%;
    --muted: 0 0% 14.9%;
    --muted-foreground: 0 0% 63.9%;
    --accent: 0 0% 14.9%;
    --accent-foreground: 0 0% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
    --border: 0 0% 14.9%;
    --input: 0 0% 14.9%;
    --ring: 0 0% 83.1%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-primary text-foreground;
    @apply font-sans;
  }
}

.blur-with-color {
  background-color: hsla(241, 63%, 49%, 0.5);
  backdrop-filter: blur(20px);
}

